kubernetesDeployments/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      -  name: frontend
         image: tejaroyal/edufrontend-app:latest
         ports:
         - containerPort: 80
