kubernetesDeployments/backend-services.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-services
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
