kubernetesDeployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: your-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-services
                port:
                  number: 80
